--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="spinner_items">
+        <item>Sexo:</item>
+        <item>Masculino</item>
+        <item>Feminino</item>
+    </string-array>
 </resources>
