--- a/app/src/main/res/values/telaLogin.xml
+++ b/app/src/main/res/values/telaLogin.xml
@@ -1,3 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="login" translatable="false">Register</string>
+    <string name="nome" translatable="false">Nome:</string>
+    <string name="email" translatable="false">Email:</string>
+    <string name="telefone" translatable="false">Telefone:</string>
+    <string name="ja_possui_login" translatable="false">Já possui Login?</string>
+    <string name="login_existent" translatable="false">Login</string>
+    <string name="forgot_senha" translatable="false">Esqueceu sua senha?</string>
+    <string name="recuperar_senha" translatable="false">Recuperar senha</string>
 </resources>
